ast/tests/snapshots/ast__multi_line_string.snap
---
source: ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    StringLiteral(
        AstIdentifier {
            range: AstRange {
                start: AstPoint {
                    line: 1,
                    col: 8,
                },
                end: AstPoint {
                    line: 4,
                    col: 16,
                },
            },
            value: "Hereisamuiltilinestring",
        },
    ),
    11,
)
