ast/tests/snapshots/ast__name_dot_logical.snap
---
source: ast/tests/ast.rs
expression: parsed
---
(
    AstAnnotated {
        range: AstRange {
            start: AstPoint {
                line: 0,
                col: 0,
            },
            end: AstPoint {
                line: 0,
                col: 10,
            },
        },
        name: AstIdentifier {
            range: AstRange {
                start: AstPoint {
                    line: 0,
                    col: 1,
                },
                end: AstPoint {
                    line: 0,
                    col: 10,
                },
            },
            value: "Overwrite",
        },
        parameters: [],
    },
    2,
)
